--- a/3_ESRGAN/3_ESGRAN_PSNR_X2.ipynb
+++ b/3_ESRGAN/3_ESGRAN_PSNR_X2.ipynb
@@ -39,26 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3cd50d47-60e3-495e-afb5-80549294c09b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "HR_train_paths = sorted(glob.glob(\"../data/DIV2K_train_HR/*.png\"))\n",
-    "X2_train_paths = sorted(glob.glob(\"../data/DIV2K_train_LR_bicubic/X2/*.png\"))\n",
-    "X4_train_paths = sorted(glob.glob(\"../data/DIV2K_train_LR_bicubic/X4/*.png\"))\n",
-    "X8_train_paths = sorted(glob.glob(\"../data/DIV2K_train_LR_bicubic/X8/*.png\"))\n",
-    "X16_train_paths = sorted(glob.glob(\"../data/DIV2K_train_LR_bicubic/X16/*.png\"))\n",
-    "X32_train_paths = sorted(glob.glob(\"../data/DIV2K_train_LR_bicubic/X32/*.png\"))\n",
-    "X64_train_paths = sorted(glob.glob(\"../data/DIV2K_train_LR_bicubic/X64/*.png\"))\n",
+    "HR_train_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_train_HR/*.png\"))\n",
+    "X2_train_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_train_LR_bicubic/X2/*.png\"))\n",
+    "X4_train_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_train_LR_bicubic/X4/*.png\"))\n",
+    "X8_train_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_train_LR_bicubic/X8/*.png\"))\n",
+    "X16_train_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_train_LR_bicubic/X16/*.png\"))\n",
+    "X32_train_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_train_LR_bicubic/X32/*.png\"))\n",
+    "X64_train_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_train_LR_bicubic/X64/*.png\"))\n",
     "\n",
-    "HR_valid_paths = sorted(glob.glob(\"../data/DIV2K_valid_HR/*.png\"))\n",
-    "X2_valid_paths = sorted(glob.glob(\"../data/DIV2K_valid_LR_bicubic/X2/*.png\"))\n",
-    "X4_valid_paths = sorted(glob.glob(\"../data/DIV2K_valid_LR_bicubic/X4/*.png\"))\n",
-    "X8_valid_paths = sorted(glob.glob(\"../data/DIV2K_valid_LR_bicubic/X8/*.png\"))\n",
-    "X16_valid_paths = sorted(glob.glob(\"../data/DIV2K_valid_LR_bicubic/X16/*.png\"))\n",
-    "X32_valid_paths = sorted(glob.glob(\"../data/DIV2K_valid_LR_bicubic/X32/*.png\"))\n",
-    "X64_valid_paths = sorted(glob.glob(\"../data/DIV2K_valid_LR_bicubic/X64/*.png\"))"
+    "HR_valid_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_valid_HR/*.png\"))\n",
+    "X2_valid_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_valid_LR_bicubic/X2/*.png\"))\n",
+    "X4_valid_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_valid_LR_bicubic/X4/*.png\"))\n",
+    "X8_valid_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_valid_LR_bicubic/X8/*.png\"))\n",
+    "X16_valid_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_valid_LR_bicubic/X16/*.png\"))\n",
+    "X32_valid_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_valid_LR_bicubic/X32/*.png\"))\n",
+    "X64_valid_paths = sorted(glob.glob(\"../data/DIV2K/DIV2K_valid_LR_bicubic/X64/*.png\"))"
    ]
   },
   {
